forward-auth/deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      name: forward-auth
  template:
    metadata:
      labels:
        name: forward-auth
    spec:
      containers:
        - image: lowet84/traefik-forward-auth
          name: forward-auth
