forward-auth/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`forward.fredriklowenhamn.se`)
      kind: Rule
      services:
        - name: forward-auth
          port: 4181
      middlewares:
        - name: auth
  tls:
    certResolver: default
